# GameOfLife-vue-wasm

./: .gitlab-ci.yml  Dockerfile  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
src/: App.vue  i18n.ts  main.ts
src/components/: MainNavBar.vue
src/locales/: en.json  fr.json
src/router/: index.ts
src/views/: GameOfLifeView.vue
src/workers/game-of-life/: rendering.worker.js  universe.worker.js
wasm/game-of-life-renderer/: Cargo.toml
wasm/game-of-life-renderer/src/: lib.rs
wasm/game-of-life-universe/: Cargo.toml  LICENSE_MIT
wasm/game-of-life-universe/src/: lib.rs
