[package]
name = "game-of-life-universe"
version = "0.1.0"
authors = ["jlanglade"]
edition = "2018"
description = "Conway's Game of Life universe in Rust and WebAssembly"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperPommeDeTerre/GameOfLife-vue-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
